--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,6 +16,8 @@ end
 
 target 'shopping_app' do
   config = use_native_modules!
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
 
   use_react_native!(
     :path => config[:reactNativePath],
