--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@shopify/react-native-skia": "^1.5.3",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "victory-native": "^41.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
