--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@shopify/react-native-skia": "^1.5.3",
     "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.8.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "victory-native": "^41.9.0"
   },
   "devDependencies": {
